--- a/ASSIGNMENT_3/question_8.css
+++ b/ASSIGNMENT_3/question_8.css
@@ -17,11 +17,36 @@ body{
 
 
 
+
 #content div:nth-child(even){
   background: #777;
 }
 
+@media screen and (min-width:768px){
+  .social{
+    display: flex;
+    justify-content:flex-end;
+    flex-wrap: nowrap;
+  }
+
+  nav{
+    flex: 1 1 0;
+    justify-content: space-between;
+  }
+
+  nav li{
+  //  flex: 1 1 0;
+
+  }
+
+  .social{
+    margin: 0;
+  }
+
+}
+
 .one{
+  background-color: black;
   grid-column: 1/7;
   grid-row: 1/2;
   text-align: center;
@@ -38,6 +63,29 @@ h1{
 
 span{
   color:darkcyan;
+  font-family: "Times New Roman";
+}
+
+nav ul{
+  list-style-type: none;
+}
+
+.social .wert{
+   color: white;
+   top: 150px;
+   margin-top: 20px;
+ }
+
+.social li a{
+  text-decoration: none;
+  color: darkcyan;
+  display: block;
+  padding: 20px;
+}
+
+.social li a:hover{
+  color:grey;
+  text-decoration: underline;
 }
 
 .two{
@@ -54,8 +102,8 @@ img{
 .two .welcome{
   opacity: 0.8;
   position: absolute;
-  padding:30px;
-  left:30%;
+  padding:5px;
+  left:31%;
   top:60%;
 }
 
@@ -71,62 +119,403 @@ h2{
   font-size: 1.2em;
 }
 
+.welcome h2 a{
+  text-decoration: none;
+  color: black;
+  display: block;
+  padding: 20px;
+}
+
+.welcome h2 a:hover{
+  color:white;
+  text-decoration: underline;
+
+}
+
+.welcome h2 a:visited{
+  color:white;
+}
+
+
 .three{
   grid-column: 1/7;
   grid-row: 6/7;
 }
 
 .four{
+  position: relative;
   grid-column: 1/3;
   grid-row: 7/9;
 }
 
+.image {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.a {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color:black;
+}
+.four:hover .a {
+  opacity: 1;
+  border: 2px solid black;
+}
+
+.text {
+  color:black;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-family: cursive;
+}
+
+
 .five{
+  position: relative;
   grid-column: 3/5;
   grid-row: 7/9;
 }
 
+.image1 {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.b{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color:black;
+}
+.five:hover .b {
+  opacity: 1;
+  border: 2px solid black;
+}
+.text1{
+  color: black;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-family: cursive;
+}
+
 .six{
+  position: relative;
   grid-column: 5/7;
   grid-row: 7/9;
 }
 
+.image2 {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.c{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: black;
+}
+.six:hover .c {
+  opacity: 1;
+  border: 2px solid black;
+}
+
+.text2{
+  color: black;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-family: cursive;
+}
+
 .seven{
+  position: relative;
   grid-column: 1/3;
   grid-row: 9/11;
 }
 
+.image3 {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.d{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: black;
+}
+.seven:hover .d {
+  opacity: 1;
+  border: 2px solid black;
+}
+
+.text3{
+  color: black;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-family: cursive;
+}
+
 .eight{
+  position: relative;
   grid-row: 9/11;
   grid-column: 3/5;
 }
 
+.image4 {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.e{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: black;
+}
+.eight:hover .e {
+  opacity: 1;
+  border: 2px solid black;
+}
+
+.text4{
+  color: black;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-family: cursive;
+}
+
 .nine{
+  position: relative;
   grid-column: 5/7;
   grid-row:9/11;
 }
 
+.image5 {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.f{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: black;
+}
+.nine:hover .f {
+  opacity: 1;
+  border: 2px solid black;
+}
+
+.text5{
+  color: black;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-family: cursive;
+}
+
 .ten{
+  position: relative;
   grid-column: 1/3;
   grid-row: 11/13;
 }
 
+.image6 {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.g{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: black;
+}
+.ten:hover .g {
+  opacity: 1;
+  border: 2px solid black;
+}
+
+.text6{
+  color: black;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-family: cursive;
+}
+
 .eleven{
+  position: relative;
   grid-column:3/5;
   grid-row:11/13;
 }
 
+
+.image7 {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.h{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: black;
+}
+.eleven:hover .h {
+  opacity: 1;
+  border: 2px solid black;
+}
+
+.text7{
+  color: black;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-family: cursive;
+}
+
 .twelve{
+  position: relative;
   grid-row: 11/13;
   grid-column: 5/7;
 }
 
+.image8 {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.i{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: black;
+}
+.twelve:hover .i {
+  opacity: 1;
+  border: 2px solid black;
+}
+
+.text8{
+  color: black;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-family: cursive;
+}
+
+
 .thirteen{
+  text-align: left;
   grid-column: 1/7;
-  color: lightgrey;
+  color: white;
   background: black;
   padding-top: 50px;
   font-size: 25px;
   margin-bottom: 10px;
   padding-bottom: 25px;
 }
+
+.social .wert{
+   color: white;
+   top: 150px;
+   margin-top: 20px;
+ }
